; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_RM_BlockClientOnKeys.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_RM_BlockClientOnKeys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @RM_BlockClientOnKeys(i32* %0, i32 %1, i32 %2, void (i32*, i8*)* %3, i64 %4, i32** %5, i32 %6, i8* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca void (i32*, i8*)*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32**, align 8
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store void (i32*, i8*)* %3, void (i32*, i8*)** %12, align 8
  store i64 %4, i64* %13, align 8
  store i32** %5, i32*** %14, align 8
  store i32 %6, i32* %15, align 4
  store i8* %7, i8** %16, align 8
  %17 = load i32*, i32** %9, align 8
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %11, align 4
  %20 = load void (i32*, i8*)*, void (i32*, i8*)** %12, align 8
  %21 = load i64, i64* %13, align 8
  %22 = load i32**, i32*** %14, align 8
  %23 = load i32, i32* %15, align 4
  %24 = load i8*, i8** %16, align 8
  %25 = call i32* @moduleBlockClient(i32* %17, i32 %18, i32 %19, void (i32*, i8*)* %20, i64 %21, i32** %22, i32 %23, i8* %24)
  ret i32* %25
}

declare dso_local i32* @moduleBlockClient(i32*, i32, i32, void (i32*, i8*)*, i64, i32**, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
